@@ -12,6 +12,7 @@ documents those changes that are of interest to users and administrators.
     interactive step, the same as is done for the batch step.
  -- Fix various potential deadlocks when altering objects in the database
     dealing with every cluster in the database.
+ -- slurmrestd - handle slurmdbd connection failures without segfaulting.
 
 * Changes in Slurm 20.11.7
 ==========================
